# aoc2025

./: .clang-format  .gitignore  CMakeLists.txt
include/aoc2025lib/: day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp  day06.hpp  day07.hpp  day08.hpp  day09.hpp  day10.hpp  day11.hpp  days.hpp
src/: runner.cpp
tests/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp
